--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/f5a684b8b8.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="panier.js"></script>
   </head>
   <body>
     <nav class="flex justify-between items-center p-4">
@@ -19,6 +19,6 @@
         <i class="fa-solid fa-shopping-cart"></i>
       </a>
     </nav>
-    <div id="main"></div>
+    <div id="panier"></div>
   </body>
 </html>
