--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/f5a684b8b8.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <nav class="flex justify-between items-center p-4">
