some changes for github pages

--- a/article.html
+++ b/article.html
@@ -15,7 +15,7 @@
       <a href="/">
         <i class="fa-solid fa-bars"></i>
       </a>
-      <a href="/panier">
+      <a href="/#/panier">
         <i class="fa-solid fa-shopping-cart"></i>
       </a>
     </nav>
