change the routes of a tags

--- a/article.html
+++ b/article.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <nav class="flex justify-between items-center p-4">
-      <a href="/">
+      <a href="/kedufront">
         <i class="fa-solid fa-bars"></i>
       </a>
-      <a href="/panier">
+      <a href="/kedufront/panier">
         <i class="fa-solid fa-shopping-cart"></i>
       </a>
     </nav>
